--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,13 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MarceloLavratti/api-rest.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MarceloLavratti/api-rest/issues"
+  },
+  "homepage": "https://github.com/MarceloLavratti/api-rest#readme"
 }
